--- a/latihan.html
+++ b/latihan.html
@@ -6,6 +6,6 @@
     <body>
         <h1>Git Tutorial</h1>
         <h3>Git Commands</h3>
-        <p>Testing</p>
+        <p>Testi2ng</p>
     </body>
 </html>
