--- a/latihan.html
+++ b/latihan.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
 <html>
-    halo
+    <head>
+        <title>Learn Github</title>
+    </head>
+
+    <body>
+        <h1>Git Tutorial</h1>
+        <h3>Git Commands</h3>
+        <p>Testing</p>
+    </body>
 </html>
